refactor: Replace MMLDate utility methods with DateUtils
- Replaced usage of MMLDate.getDateTimeAsString() with LocalDateTime and DateUtils.ISO_DATE_TIME_FORMATTER in multiple files.
- Removed deprecated MMLDate.getDateTimeAsString() method.
- Updated imports to include java.time and java.time.format packages.
- WHY: This change aligns with the project's effort to modernize date handling using Java 8's LocalDateTime and DateTimeFormatter, improving code readability and maintainability.